# multivitamin

./: .coverage  .drone.yml  .gitignore  .gitlab-ci.yml  .travis.yml  MANIFEST.in  README.md  installation.sh  readme.md  requirements.txt  setup.cfg  setup.py
cvapis/: __init__.py
cvapis/avro_api/: avro_api.py  avro_io.py  avro_query.py  avro_tools.py  config.py  (+4 more)
docker/: Dockerfile-GPU-9-7  build_docker_image.sh  install_deps.sh  install_nvidia_docker.sh  install_opencv.sh
docs/: Makefile  conf.py  index.rst  mkdocs.yml  readme.md
examples/: avro_merging.py  avro_tracks.py  dummy_detector.py  http_server.py  media.py  vehicle_make_model_app.py
multivitamin/: __init__.py  http_server.py  responses_buffer.py  server.py  web_server.py
tests/: MediaRetrieverSpeedTest.py  response0_A.avro  test_GPUUtility.py  test_avro_api.py  test_avro_api_transform.py  test_avro_io.py  test_avro_query.py  test_caffe_classifier.py  test_classifier_prevdetections.py  test_data.py  test_detector_classifier_prev.py  test_es_api.py  test_es_api_createAndpopulateIndex.py  test_frame_drawer.py  test_media.py  test_module.py  test_request.py  test_request_api.py  test_server.py  test_ssd_detector.py  test_tf_detector.py  test_webapi.py  utils.py
tools/: avro_to_ssd.py  doc_to_csv.py  ham2avro.py  hamify_images.py  hamify_videos.py  nhl_placements_task.yml  push_sqs.py  readme.md  template-Placement-ham.json  unhamify.py  visualize_frame_anns.py  visualize_tracks.py  visualize_tracks_as_video.py
vitamincv/: __init__.py  async_server.py  controller.py  http_server.py  server.py
(+189 files in other folders)
