[metadata]
name = multivitamin
author = GumGum Computer Vision
summary = Python framework for serving ML models
description-file = README.md
home-page = https://gitlab.com/gumgum-sports/computer-vision/multivitamin

[files]
packages =
  multivitamin

[build_sphinx]
source-dir = doc/source
build-dir  = doc/build
all_files  = 1

[upload_sphinx]
upload-dir = doc/build/html
