[metadata]
name = multivitamin
author = GumGum Computer Vision
summary = Python framework for serving ML models
home-page = https://gitlab.com/gumgum-sports/computer-vision/multivitamin

[files]
packages =
  multivitamin

[build_sphinx]
source-dir = docs/source
build-dir  = docs/build
all_files  = 1

[upload_sphinx]
upload-dir = docs/build/html
